examples/test/testpolicy18131.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18131
  namespace: namespace184
spec:
  podSelector:
    matchLabels:
      key12: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value3
          key0: value8
      podSelector:
        matchLabels:
          key23: value43
          key5: value45
          key14: value43
